package com.nanyin.pattern.proxy;


abstract class BathRoom {
    // 去澡堂泡澡
    abstract BathRoom enterBathroom(Person person);
}
