package com.nanyin.pattern.proxy;

public enum SexEnum {
    MALE,FEMALE
}
